--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@headlessui/react": "^2.2.0",
     "@heroicons/react": "^2.2.0",
     "@next/third-parties": "^15.1.0",
+    "firebase": "^11.1.0",
     "next": "^15.1.0",
     "next-nprogress-bar": "^2.3.14",
     "react": "^19.0.0",
