--- a/package.json
+++ b/package.json
@@ -12,11 +12,18 @@
     "@headlessui/react": "^2.2.0",
     "@heroicons/react": "^2.2.0",
     "@next/third-parties": "^15.1.0",
+    "@tiptap/extension-underline": "^2.11.2",
+    "@tiptap/pm": "^2.11.2",
+    "@tiptap/react": "^2.11.2",
+    "@tiptap/starter-kit": "^2.11.2",
+    "axios": "^1.7.9",
     "firebase": "^11.1.0",
+    "lucide-react": "^0.473.0",
     "next": "^15.1.0",
     "next-nprogress-bar": "^2.3.14",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "tiptap-extension-resize-image": "^1.2.1",
     "use-debounce": "^10.0.4"
   },
   "devDependencies": {
