--- a/package.json
+++ b/package.json
@@ -9,17 +9,22 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@cloudinary/react": "^1.13.1",
+    "@cloudinary/url-gen": "^1.21.0",
     "@headlessui/react": "^2.2.0",
     "@heroicons/react": "^2.2.0",
     "@next/third-parties": "^15.1.0",
+    "@tiptap/extension-image": "^2.11.2",
     "@tiptap/extension-underline": "^2.11.2",
     "@tiptap/pm": "^2.11.2",
     "@tiptap/react": "^2.11.2",
     "@tiptap/starter-kit": "^2.11.2",
     "axios": "^1.7.9",
+    "cloudinary": "^2.5.1",
     "firebase": "^11.1.0",
     "lucide-react": "^0.473.0",
     "next": "^15.1.0",
+    "next-cloudinary": "^6.16.0",
     "next-nprogress-bar": "^2.3.14",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
