--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,7 @@
 {
-  "extends": ["next/core-web-vitals", "next/typescript"]
+  "extends": ["next/core-web-vitals", "next/typescript"],
+  "@typescript-eslint/no-unused-expressions": [
+    "error",
+    { "allowShortCircuit": true }
+  ]
 }
