--- a/package.json
+++ b/package.json
@@ -12,13 +12,16 @@
     "@headlessui/react": "^2.2.0",
     "@heroicons/react": "^2.2.0",
     "@next/third-parties": "^15.1.0",
+    "@radix-ui/react-dropdown-menu": "^2.1.4",
     "@tiptap/extension-image": "^2.11.2",
     "@tiptap/extension-underline": "^2.11.2",
     "@tiptap/pm": "^2.11.2",
     "@tiptap/react": "^2.11.2",
     "@tiptap/starter-kit": "^2.11.2",
     "axios": "^1.7.9",
+    "class-variance-authority": "^0.7.1",
     "cloudinary": "^2.5.1",
+    "clsx": "^2.1.1",
     "firebase": "^11.1.0",
     "lucide-react": "^0.473.0",
     "next": "^15.1.0",
@@ -26,6 +29,9 @@
     "next-nprogress-bar": "^2.3.14",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-toastify": "^11.0.3",
+    "tailwind-merge": "^2.6.0",
+    "tailwindcss-animate": "^1.0.7",
     "tiptap-extension-resize-image": "^1.2.1",
     "use-debounce": "^10.0.4"
   },
