--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
     "@headlessui/react": "^2.2.0",
     "@heroicons/react": "^2.2.0",
     "@next/third-parties": "^15.1.0",
+    "@radix-ui/react-dialog": "^1.1.4",
     "@radix-ui/react-dropdown-menu": "^2.1.4",
+    "@radix-ui/react-popover": "^1.1.4",
+    "@radix-ui/react-slot": "^1.1.1",
     "@tiptap/extension-image": "^2.11.2",
     "@tiptap/extension-underline": "^2.11.2",
     "@tiptap/pm": "^2.11.2",
@@ -22,6 +25,7 @@
     "class-variance-authority": "^0.7.1",
     "cloudinary": "^2.5.1",
     "clsx": "^2.1.1",
+    "cmdk": "^1.0.0",
     "firebase": "^11.1.0",
     "lucide-react": "^0.473.0",
     "next": "^15.1.0",
