feature : send email

--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "next": "^15.1.0",
     "next-cloudinary": "^6.16.0",
     "next-nprogress-bar": "^2.3.14",
+    "nodemailer": "^7.0.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-toastify": "^11.0.3",
@@ -42,6 +43,7 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@types/node": "^20",
+    "@types/nodemailer": "^6.4.17",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
